@@ -116,6 +116,9 @@ dpkg (1.14.17) UNRELEASED; urgency=low
       respectively.
   * dpkg-source has a new --no-check option. It disables GPG check and
     checksums checks. Closes: #220758
+  * dpkg-shlibdeps is now able to look into directories containing libraries
+    used by cross-built binaries provided that the right environment variable
+    are set. Closes: #453267
 
   [ Frank Lichtenheld ]
   * Add a warning in dpkg-buildpackage if the build-dependencies are not
