@@ -1,4 +1,10 @@
 2008-03-27  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Shlibs.pm: Support cross-compilation by adding
+	directories containing libraries for the architecture that is
+	being crossbuilt.
+
+2008-03-27  Raphael Hertzog  <hertzog@debian.org>
             Frank Lichtenheld  <djpig@debian.org>
             Joey Hess  <joeyh@debian.org>
             Colin Watson  <cjwatson@debian.org>
